applied requested changes